bdr.BDR.scala.error
Erreur de compilation :
BDR:6: error: not found: value L
    } else if (litMessage()==L){
                             ^BDR:8: error: not found: value I
    } else if (litMessage()==I){
                             ^BDR:10: error: not found: value A
    } else if (litMessage()==A){
                             ^BDR:12: error: not found: value B
    } else if (litMessage()==B){
                             ^BDR:14: error: not found: value C
    } else if (litMessage()==C){
                             ^BDR:16: error: not found: value Z
    } else if (litMessage()==Z){
                             ^BDR:18: error: not found: value Y
    } else if (litMessage()==Y){
                             ^BDR:20: error: not found: value X
    } else if (litMessage()==X){
                             ^BDR:23: error: value fini is not a member of Unit
possible cause: maybe a semicolon is missing before `value fini'?
  } fini=true
    ^